--- a/thankyou.html
+++ b/thankyou.html
@@ -19,10 +19,9 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="centered-content-container">
         <div id="thank-you-container">
-            <h1>Thank You for Scheduling!</h1>
+            <h1>Thanks for Booking with me!</h1>
             <p>Your appointment has been successfully scheduled.</p>
-            <p>We have sent a confirmation email to your provided address. Please check your inbox (and spam folder if you don't see it).</p>
-            <p>We look forward to meeting with you!</p>
+            <p>Keep an eye out for your calendar invite.</p>
         </div>
     </div>
 
