--- a/thankyou.html
+++ b/thankyou.html
@@ -2,22 +2,30 @@
 <html>
 <head>
     <title>Thank You!</title>
-    <meta name="robots" content="noindex, nofollow">
     <meta charset="UTF-8">
+    <meta name="robots" content="noindex, nofollow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Ryan Abrams">
+    <meta name="description" content="Thank you for booking a meeting with Ryan Abrams.">
+    <meta name="keywords" content="ryan abrams">
+    <meta name="language" content="English">
     <meta name="author" content="Ryan Abrams">
 
-    <script>(function(w,d,s,l,i){w[l]=w[l]||([]);w[l].push({'gtm.start':
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
     j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-XXXXXXX');</script>
+    })(window,document,'script','dataLayer','GTM-TCCWGMLK');</script>
+    <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
 <body>
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-XXXXXXX"
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TCCWGMLK"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div class="centered-content-container">
         <div id="thank-you-container">
             <h1>Thanks for Booking with me!</h1>
