edited thank you styling

--- a/thankyou.html
+++ b/thankyou.html
@@ -19,7 +19,7 @@
     })(window,document,'script','dataLayer','GTM-TCCWGMLK');</script>
     <!-- End Google Tag Manager -->
     <link rel="stylesheet" href="css/styles.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Google Tag Manager (noscript) -->
@@ -33,6 +33,5 @@
             <p>Keep an eye out for your calendar invite.</p>
         </div>
     </div>
-
 </body>
 </html>
