updates to thank you.

--- a/thankyou.html
+++ b/thankyou.html
@@ -30,9 +30,11 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="centered-content-container">
         <div id="thank-you-container">
+            <img src="images/profile.jpg" alt="Ryan Abrams" class="profile-image">
             <h1>Thanks for Booking with me!</h1>
             <p>Your appointment has been successfully scheduled.</p>
             <p>Keep an eye out for your calendar invite.</p>
+            <button class="rounded-button">Lorem ipsum dolor sit amet</button>
         </div>
     </div>
 </body>
