--- a/thankyou.html
+++ b/thankyou.html
@@ -34,7 +34,7 @@
             <h1>Thanks for Booking with me!</h1>
             <p>Your appointment has been successfully scheduled.</p>
             <p>Keep an eye out for your calendar invite.</p>
-            <button class="rounded-button">Lorem ipsum dolor sit amet</button>
+            <a href="https://www.ryanabrams.com/" class="rounded-button">Return to Website</a>
         </div>
     </div>
 </body>
