--- a/thankyou.html
+++ b/thankyou.html
@@ -30,7 +30,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <div class="centered-content-container">
         <div id="thank-you-container">
-            <img src="images/profile.jpg" alt="Ryan Abrams" class="profile-image">
+            <img src="images/profile.png" alt="Ryan Abrams" class="profile-image">
             <h1>Thanks for Booking with me!</h1>
             <p>Your appointment has been successfully scheduled.</p>
             <p>Keep an eye out for your calendar invite.</p>
